upgrade to vertx 5.0.7, switch to jdk 25, use zgc by default